<?xml version="1.0"?>
<package format="3">
  <name>grpc</name>
  <version>0.0.17</version>
  <description>Catkinized gRPC Package</description>
  <maintainer email="shengye@ucsd.edu">Shengye Wang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoconf</build_depend>
  <build_depend>libtool</build_depend>
  <build_depend>git</build_depend>
  <depend>libssl-dev</depend>
  <depend>rsync</depend>
  <depend>zlib</depend>
</package>
