<?xml version="1.0"?>
<package format="2">
  <name>test_grpc</name>
  <version>0.0.17</version>
  <description>A package for testing the grpc package</description>
  <maintainer email="furushchev@gmail.com">Yuki Furuta</maintainer>
  <license>BSD</license>
  <author email="furushchev@gmail.com">Yuki Furuta</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grpc</depend>
  <depend>roscpp</depend>
  <test_depend>rostest</test_depend>
</package>
